@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.regex.Pattern;
 
 import org.junit.jupiter.api.Test;
@@ -40,9 +41,13 @@ class AssembleMojoTest {
 
     private static String loadMojoSource() throws Exception {
         // Find source relative to test class location
-        String testClassPath = AssembleMojoTest.class.getProtectionDomain()
-            .getCodeSource().getLocation().getPath();
-        Path testDir = Path.of(testClassPath);
+        Path testDir = Paths.get(
+                AssembleMojoTest.class
+                        .getProtectionDomain()
+                        .getCodeSource()
+                        .getLocation()
+                        .toURI()
+        );
         
         // Navigate from target/test-classes back to src/main/java
         Path source = testDir.resolve("../../src/main/java/org/skyve/toolchain/AssembleMojo.java")
