@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -43,9 +44,13 @@ class GenerateDomainConfigTest {
 
     private static String loadConfigSource() throws Exception {
         // Find source relative to test class location
-        String testClassPath = GenerateDomainConfigTest.class.getProtectionDomain()
-            .getCodeSource().getLocation().getPath();
-        Path testDir = Path.of(testClassPath);
+        Path testDir = Paths.get(
+                GenerateDomainConfigTest.class
+                        .getProtectionDomain()
+                        .getCodeSource()
+                        .getLocation()
+                        .toURI()
+        );
         
         // Navigate from target/test-classes back to src/main/java
         Path source = testDir.resolve("../../src/main/java/org/skyve/toolchain/config/GenerateDomainConfig.java")
